Updated background color
- Used a lighter color for better contrast.

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@
 /* End of Josh Comeau CSS reset */
 
 main {
-    background-color: #1a595e;
+    background-color: #008080;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
